--- a/src/components/Hero/VerticalWithImage/VerticalWithImage.astro
+++ b/src/components/Hero/VerticalWithImage/VerticalWithImage.astro
@@ -3,6 +3,7 @@ import Container from "@components/Container.astro";
 import "./hero.css";
 import { inferRemoteSize, Picture } from "astro:assets";
 import { getImageUrl } from "@utils/pocketbase";
+import CustomImage from "@components/CustomImage.astro";
 
 interface Props {
     title: string;
@@ -26,23 +27,14 @@ const { width, height } = await inferRemoteSize(url);
         <Container>
             <article class="vertical_hero__content">
                 <h1>{title}</h1>
-                <p>{excerpt}</p>
+                <div>
+                    <p>{excerpt}</p>
+                    <a class="btn btn-secondary btn-md" href="#contact-us" style="margin-top: var(--size-3);">Let's Work Together</a>
+                </div>
             </article>
         </Container>
         <div class="vertical_hero__image_wrapper full-width">
-            <Picture
-                src={url}
-                alt={image.title}
-                width={width}
-                height={height}
-                formats={["avif", "webp"]}
-                widths={[350, 800, width]}
-                sizes={`(max-width: 1280px) 350px, ${width}px`}
-                quality={80}
-                class="vertical_hero__image"
-                loading="eager"
-                decoding="sync"
-            />
+            <CustomImage classlist="vertical_hero__image" eager={true} image={image} size="large" />
         </div>
     </div>
 </header>
