--- a/src/components/Hero/VerticalWithImage/hero.css
+++ b/src/components/Hero/VerticalWithImage/hero.css
@@ -1,9 +1,11 @@
 .vertical_hero {
     background-color: var(--clr-primary-dark);
 }
+
 .vertical_hero__wrapper {
+    --row-height: 400px;
     display: grid;
-    grid-template-rows: 1fr 400px;
+    grid-template-rows: 1fr var(--row-height);
     gap: var(--size-4);
 }
 
@@ -19,7 +21,7 @@
     color: var(--clr-neutral-light);
 }
 
-.vertical_hero__content > * {
+.vertical_hero__content>* {
     text-align: center;
 }
 
@@ -29,7 +31,7 @@
 }
 
 .vertical_hero__image,
-picture{
+picture {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -37,4 +39,36 @@ picture{
 
     /* border-radius: var(--size-8); */
     overflow: hidden;
+}
+
+.vertical_hero__content>div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media (min-width: 768px) {
+    .vertical_hero__content {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: var(--size-2);
+        align-items: start;
+        justify-content: center;
+        padding-top: var(--size-12);
+        padding-bottom: var(--size-8);
+    }
+
+    .vertical_hero__wrapper {
+        --row-height: 300px;
+    }
+
+    .vertical_hero__content>* {
+        text-align: left;
+    }
+
+    .vertical_hero__content>div {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
 }
