--- a/src/components/Sections/Partners/Partners.astro
+++ b/src/components/Sections/Partners/Partners.astro
@@ -34,8 +34,7 @@ const cards = data.expand.section_grid;
                                     image={card.expand.image}
                                     classlist="partner__image_component"
                                     size="small"
-                                    fit={card.expand.image.fit}
-                                    position={card.expand.image.position}
+                                    eager={false}
                                 />
                             </div>
                         ))
@@ -49,8 +48,7 @@ const cards = data.expand.section_grid;
                                     image={card.expand.image}
                                     classlist="partner__image_component"
                                     size="small"
-                                    fit={card.expand.image.fit}
-                                    position={card.expand.image.position}
+                                    eager={false}
                                 />
                             </div>
                         ))
