--- a/src/components/Hero/Gradient/Gradient.astro
+++ b/src/components/Hero/Gradient/Gradient.astro
@@ -7,13 +7,12 @@ import "./styles.css";
 interface Props {
     title: string;
     excerpt: string;
-    core_values: string;
     image: {
         [key: string]: string;
     };
 }
 
-const {title, excerpt, core_values, image} = Astro.props;
+const { title, excerpt, image } = Astro.props;
 
 const cards = [
     {
@@ -29,44 +28,32 @@ const cards = [
         icon: "mdi:magnet",
     },
 ];
-
 ---
 
 <header class="gg-hero">
     <Container>
-        <div class="gg-hero__wrapper">
-            <div class="gg-hero__content">
-                <h1>{title}</h1>
-                <p>{excerpt}</p>
+        <div class="gg-hero__content">
+            <h1>{title}</h1>
+            <p>{excerpt}</p>
 
-                <div class="gg-hero__cards">
-                    {
-                        cards.map((card) => (
-                            <div class="gg-hero__card">
-                                <div class="gg-hero__card__content">
-                                    <div class="gg-hero__icon-wrapper">
-                                        <Icon
-                                            name={card.icon}
-                                            class="gg-hero__icon"
-                                            aria-hidden="true"
-                                            focusable="false"
-                                        />
-                                    </div>
-                                    <span>{card.title}</span>
+            <div class="gg-hero__cards">
+                {
+                    cards.map((card) => (
+                        <div class="gg-hero__card">
+                            <div class="gg-hero__card__content">
+                                <div class="gg-hero__icon-wrapper">
+                                    <Icon
+                                        name={card.icon}
+                                        class="gg-hero__icon"
+                                        aria-hidden="true"
+                                        focusable="false"
+                                    />
                                 </div>
+                                <span>{card.title}</span>
                             </div>
-                        ))
-                    }
-                </div>
-            </div>
-            <div class="gg-hero__image">
-                <CustomImage 
-                    image={image}
-                    classlist="hero-image"
-                    fit="contain"
-                    position="center"
-                    size="medium"
-                />
+                        </div>
+                    ))
+                }
             </div>
         </div>
     </Container>
