--- a/src/components/Hero/PageHero.astro
+++ b/src/components/Hero/PageHero.astro
@@ -6,10 +6,12 @@ import Overflow from "./Overflow/Overflow.astro";
 import TwoColumnHero from "./TwoColumnHero/TwoColumnHero.astro";
 import VerticalWithImage from "./VerticalWithImage/VerticalWithImage.astro";
 import TwoSquares from "./TwoSquares/TwoSquares.astro";
+import BlockyHero from "./BlockyHero/BlockyHero.astro";
 
 const { title, excerpt, image, type, core_values } = Astro.props;
 ---
-{type === "gradient" && (<Gradient title={title} excerpt={excerpt} image={image} core_values={core_values} />)}
+{type === "blocky" && <BlockyHero title={title} excerpt={excerpt} image={image} />}
+{type === "gradient" && (<Gradient title={title} excerpt={excerpt} image={image} />)}
 {type === "black modern" && <BlackModern title={title} excerpt={excerpt} image={image} />}
 {type === "horizontal with image" && <HorizontalWithImage title={title} excerpt={excerpt} image={image} />}
 {type === "vertical with image" && <VerticalWithImage title={title} excerpt={excerpt} image={image} />}
