--- a/src/components/PageNavigation/PageNavigation.astro
+++ b/src/components/PageNavigation/PageNavigation.astro
@@ -12,14 +12,21 @@ interface Props {
 import BasicFLoatingNav from "@components/PageNavigation/Navigation/FixedNav/FixedNav.astro";
 import FloatingPill from "@components/PageNavigation/FloatingPill/FloatingPill.astro";
 import StickyNav from "@components/PageNavigation/StickyNav/StickyNav.astro";
+import BlockyNav from "./BlockyNav/BlockyNav.astro";
 const props = Astro.props;
-let fixedMenu = false;
-if (props.hero_style !== "two square") {
-    fixedMenu = true;
-}
 ---
-<!-- {props.hero_style === "floating" && <BasicFLoatingNav data={props} />}
-{props.hero_style === "two square" && <StickyNav data={props} />}
-{props.hero_style === "pill" && <FloatingPill data={props} />}
-{props.hero_style !== "two square" && <BasicFLoatingNav data={props} />} -->
-<StickyNav data={props} fixedMenu={props.hero_style !== "two square" ? true : false} />
+
+{
+    props.hero_style === "blocky" && (
+        <BlockyNav data={props} />
+    )
+}
+
+{
+    props.hero_style !== "blocky" && (
+        <StickyNav
+            data={props}
+            fixedMenu={props.hero_style !== "two square" ? true : false}
+        />
+    )
+}
