--- a/src/components/Sections/CtaSection/CtaSection.astro
+++ b/src/components/Sections/CtaSection/CtaSection.astro
@@ -8,11 +8,11 @@ import Cards from "@components/Cards/Cards.astro";
 const { data } = Astro.props;
 ---
 
-<div class="cta full-width">
+<div class="cta full-width" data-animate-on-scroll>
     <Container>
         <div class="cta__wrapper">
             <div class="cta__content">
-                <div class="cta__heading">
+                <div class="cta__heading" data-animate-on-scroll>
                     {
                         data.core_values && (
                             <ul class="cta__core_values">
@@ -40,9 +40,9 @@ const { data } = Astro.props;
 
             {
                 data.expand.image.length > 0 && (
-                    <div class="cta__image">
+                    <div class="cta__image" data-animate-on-scroll>
                         {data.expand.image.map((image: any) => (
-                            <CustomImage image={image} classlist="content_section__image" size="large" fit={image.fit} position={image.position}/>
+                            <CustomImage image={image} classlist="content_section__image" size="large" eager={false} />
                         ))}
                     </div>
                 )
