--- a/src/components/Sections/Partners/PartnersGrid/PartnersGrid.astro
+++ b/src/components/Sections/Partners/PartnersGrid/PartnersGrid.astro
@@ -32,8 +32,7 @@ interface Card {
                   image={card.expand.image}
                   classlist="partners-grid__image_component"
                   size="small"
-                  fit={card.expand.image.fit}
-                  position={card.expand.image.position}
+                  eager={false}
                 />
               )}
             </div>
