--- a/src/components/Sections/Section/Section.astro
+++ b/src/components/Sections/Section/Section.astro
@@ -18,7 +18,7 @@ const { data } = Astro.props;
                 </div>
 
                 {data.expand.image && (data.expand.image.map((image: any)=>(
-                    <CustomImage image={image} classlist="content_section__image" size="large" fit={image.fit} position={image.position}/>
+                    <CustomImage image={image} classlist="content_section__image" size="medium" eager={false}/>
                 )))}
             </div>
         )}
